# mypythproject

./: CHANGELOG.md  CONTRIBUTING.md  README.md  mypythproject.code-workspace  pyproject.toml
backtests/: AmberSharkChef.csv  AmberWolfDoctor.csv  BlackCheetahPilot.csv  BlackJaguarPilot.csv  BlackLionNurse.csv  BlackPantherAstronaut.csv  BlackSharkArtist.csv  BlackWolfMechanic.csv  BlueDolphinNurse.csv  BlueDolphinPilot.csv  BrownFalconBlacksmith.csv  BrownGorillaPilot.csv  CrimsonFalconEngineer.csv  CrimsonOwlDoctor.csv  GoldLeopardScientist.csv  GoldPantherAstronaut.csv  GoldTigerAstronaut.csv  GreyBearPhotographer.csv  GreyDolphinLawyer.csv  GreyHawkSoldier.csv  IndigoFoxFarmer.csv  MagentaFoxEngineer.csv  MagentaHawkSoldier.csv  OrangeCheetahMechanic.csv  OrangeEagleMechanic.csv  OrangeHorseMechanic.csv  PinkElephantNurse.csv  PinkFalconEngineer.csv  PinkFoxDoctor.csv  PinkPantherEngineer.csv  PurpleSharkChef.csv  RedGorillaFarmer.csv  RedOwlArtist.csv  RedPantherCarpenter.csv  RedTigerLawyer.csv  SilverBearFirefighter.csv  SilverCobraEngineer.csv  SilverOwlTeacher.csv  SilverSharkFirefighter.csv  TealOwlScientist.csv  (+13 more)
blockchain/: backtest.pkl  backtest_1xozk.pkl  backtest_4jo4a.pkl  backtest_8roio.pkl  backtest_9ds81.pkl  backtest_bewim.pkl  backtest_bv5zn.pkl  backtest_bzj2s.pkl  backtest_di3k4.pkl  backtest_epsm4.pkl  backtest_fuiox.pkl  backtest_gwaai.pkl  backtest_ib3om.pkl  backtest_in8qr.pkl  backtest_jcmsn.pkl  backtest_kj91k.pkl  backtest_lfw0j.pkl  backtest_m3ef5.pkl  backtest_navf9.pkl  backtest_nbyqh.pkl  backtest_pkqzn.pkl  backtest_q0y22.pkl  (+6 more)
(+8 files in other folders)
